--- a/src/resources/drachtio/drachtio.service
+++ b/src/resources/drachtio/drachtio.service
@@ -1,11 +1,27 @@
 [Unit]
-Description=Drachtio SIP Server
-After=network.target
+Description=drachtio
+After=syslog.target network.target local-fs.target
 
 [Service]
-ExecStart=/usr/local/bin/drachtio -f /etc/drachtio/drachtio.conf.xml
+; service
+Type=forking
+ExecStart=/usr/local/bin/drachtio --daemon -f /etc/drachtio/drachtio.conf.xml
+TimeoutSec=15s
 Restart=always
+; exec
 User=root
+Group=daemon
+LimitCORE=infinity
+LimitNOFILE=100000
+LimitNPROC=60000
+;LimitSTACK=240
+LimitRTPRIO=infinity
+LimitRTTIME=7000000
+IOSchedulingClass=realtime
+IOSchedulingPriority=2
+CPUSchedulingPolicy=rr
+CPUSchedulingPriority=89
+UMask=0007
 
 [Install]
 WantedBy=multi-user.target
